--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,5 @@
+<!-- Generic HTML header for all pages. -->
+
 {% if page.title %}
   {% capture title %}{{ page.title }} | {{ site.title }}{% endcapture %}
 {% else %}
