--- a/_includes/sections/career.html
+++ b/_includes/sections/career.html
@@ -1,9 +1,17 @@
-<h1><span data-i18n="skills.my_skills">Bio</span></h1>
+<!-- Appears in resume.html in the _layouts folder -->
+
+<h1><span data-i18n="skills.my_skills">Experience</span></h1>
 
 <div class="archive">
   <div class="timeline" id="timeline">
     {% for career in site.data.index.careers %}
-          <div class="archive-title"><div class="archive-year"><strong>{{ career.date }}</strong> {{ career.job }} @ <a href="{{ career.link }}">{{ career.name }}</a></div></div>
+          <div class="archive-title">
+            <div class="archive-year">
+              <strong>{{ career.date }}</strong> // <a href="{{ career.link }}">{{ career.name }}</a>
+              <br>
+              {{ career.job }}
+            </div>
+          </div>
     {% endfor %}
   </div>
 </div>
