--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+
+<!-- Resume page. -->
+
 <div class="row">
     <div class="col l7">
         <div class="row">
@@ -17,9 +20,6 @@ layout: default
     </div>
 
     <div class="col l4 offset-l1">
-        <div class="row">
-            {% include sections/skills.html %}    
-        </div>
         <div class="row">
             {% include sections/career.html %}    
         </div>
