--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,3 +1,5 @@
+<!-- This file should not appear in any pages. -->
+
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES * * */
     var disqus_shortname = '{{ site.owner.disqus-shortname }}';
