--- a/_includes/read_time.html
+++ b/_includes/read_time.html
@@ -1,3 +1,5 @@
+<!-- This shouldn't appear on any pages. -->
+
 <span class="read-time" title="Estimated read time">
   {% assign words = content | number_of_words %}
   {% if words < 360 %}
