--- a/_includes/sections/education.html
+++ b/_includes/sections/education.html
@@ -1,10 +1,18 @@
+<!-- Appears in resume.html in the _layouts folder -->
+
 <div class="navy-line"></div>
 <h1><span data-i18n="skills.my_skills">Education</span></h1>
 
 <div class="archive">
   <div class="timeline" id="timeline">
-    {% for career in site.data.index.education %}
-          <div class="archive-title bio"><div class="archive-year"><strong>{{ career.date }}</strong> <a href="{{ career.link }}">{{ career.name }}</a></div></div>
+    {% for education in site.data.index.education %}
+          <div class="archive-title bio">
+            <div class="archive-year">
+              <strong>{{ education.date }}</strong> // <a href="{{ education.link }}">{{ education.name }}</a> 
+              <br>
+              {{ education.description }}
+            </div>
+          </div>
     {% endfor %}
   </div>
 </div>
