--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -1,10 +1,12 @@
+<!-- Appears in resume.html in the _layouts folder -->
+
 <h1><span data-i18n="skills.my_skills">Projects</span></h1>
 
 {% for project in site.data.index.projects %}
     <div class="row">
             <div class="col">
                 <h2 style="margin: 0">{{ project.name }}</h2>
-                <p style="margin: 0">{{ project.descr }}</p>
+                <p style="margin: 0">{{ project.description }}</p>
 
                 {% if project.github %}
                 <a href="{{ project.github }} "><i class="fa fa-fw fa-github"></i>GitHub</a>
