--- a/_includes/sections/skills.html
+++ b/_includes/sections/skills.html
@@ -1,3 +1,5 @@
+<!-- Appears in resume.html in the _layouts folder -->
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.6.0/Chart.min.js"></script>
 <h1><span data-i18n="skills.my_skills">Skills</span></h1>
 <canvas id="{{ site.data.index.skills.id }}" height="500" width="500"></canvas>    
