--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -1,5 +1,9 @@
+<!-- Include email, GitHub, and social media links and icons in the left sidebar. -->
+
 <script type="text/javascript">
-  // based on http://stackoverflow.com/a/10300743/280842
+  
+  // Based on http://stackoverflow.com/a/10300743/280842
+  
   function gen_mail_to_link(hs, subject) {
     var lhs,rhs;
     var p = hs.split('@');
@@ -10,6 +14,7 @@
     document.write(rhs + "?subject=" + subject + "\"><i class=\"fa fa-fw fa-envelope\"></i><\/a>");
   }
 </script>
+
 <div class="social-links">
   <ul>
     {% if author.email %}
@@ -17,6 +22,7 @@
       <script>gen_mail_to_link('{{ author.email }}', 'Message from your website');</script>
       </li>
     {% endif %}
+    
     {% if author.twitter %}<li><a href="http://twitter.com/{{ author.twitter }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-twitter"></i></a></li>{% endif %}
     {% if author.facebook %}<li><a href="http://facebook.com/{{ author.facebook }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-facebook"></i></a></li>{% endif %}
     {% if author.google.plus %}<li><a href="http://plus.google.com/+{{ author.google.plus }}" class="social-link-item" target="_blank"><i class="fa fa-fw fa-google-plus"></i> Google+</a></li>{% endif %}
