--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <div class="row">
     <div class="col s12 m3">
       <div class="table cover">
+        <!-- Include the left sidebar. -->
         {% include sidebar.html %}
       </div>
     </div>
