--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,6 +10,4 @@ layout: default
     <article class="page-content">
       {{ content }}
     </article>
-
-
-  </div><!-- end page content -->
+  </div>
