--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -3,7 +3,10 @@
  */
 
 // Google font import
+// Find more fonts here: https://fonts.google.com/
+
 @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:600,400,400italic|Roboto+Mono);
+@import url(https://fonts.googleapis.com/css?family=Cormorant+Garamond);
 
 // Custom variables
 
@@ -24,10 +27,11 @@ $border-width:               .0625rem !default;
 $font-family-sans-serif:     "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:          Georgia, "Times New Roman", Times, serif !default;
 $font-family-monospace:      "Roboto Mono", "Courier New", monospace !default;
-$font-family-base:           $font-family-sans-serif !default;
+$font-family-custom:         "Cormorant Garamond", serif !default;
+$font-family-base:           $font-family-custom !default;
 
 // Pixel value used to responsively scale all typography. Applied to the `<html>` element.
-$font-size-root:             15px !default;
+$font-size-root:             18px !default;
 
 $font-size-base:             $font-size-root !default;
 $font-size-lg:               $font-size-root * 1.25 !default;
@@ -56,10 +60,10 @@ $background-color: #f5f5f5;
 
 $white:            #fff;
 $primary:          #42b983;
-$secondary:        #8d7edc;
-$success:          #65e892;
-$danger:           #f83e4b;
-$warning:          #F5A623;
+$secondary:        #0c6294;
+$success:          #189945;
+$danger:           #af1f29;
+$warning:          rgb(6, 139, 6);
 $info:             #09ABF6;
 
 // Tables
