--- a/_sass/pages/_layout.scss
+++ b/_sass/pages/_layout.scss
@@ -31,16 +31,16 @@
   }
   .author_name {
     display: block;
-    color: #F36170;
-    font-size: 1.75em;
-    text-transform: lowercase;
+    color: rgb(0, 0, 0);
+    font-size: 2em;
+    /* text-transform: lowercase; */
   }
   .author_job {
     display: block;
     color: $secondary;
     font-size: 0.8em;
     font-weight: 700;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     margin: -5px auto 10px;
   }
   .author_bio {
@@ -66,7 +66,7 @@
         color: $secondary;
         &:hover,
         &:focus {
-          color: lighten($secondary, 14%);
+          color: lighten($secondary, 30%);
         }
       }
     }
@@ -81,19 +81,19 @@
     *display: inline;
     zoom: 1;
     &:after {
-      content: '/';
+      content: '';
     }
     &:last-child:after {
       content: '';
     }
     & a {
       margin-top: 1em;
-      text-transform: lowercase;
+      /* text-transform: lowercase; */
       font-size: 85%;
       color: $secondary;
       &:hover,
       &:focus {
-        color: lighten($secondary, 14%);
+        color: lighten($secondary, 30%);
       }
     }
   }
